--- a/css/about.css
+++ b/css/about.css
@@ -195,10 +195,21 @@ body.noscroll {
 .kv-wrapper {
   height: 86%;
   width: 76.4%;
-  background-image: url(https://shu-nakashima.github.io/cresta-third/img/heading-img_about.jpg);
+  background-image: url(/img/heading-img.png);
   background-size: cover;
   background-position: center 0;
   position: relative;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+  .kv-wrapper {
+    height: 86%;
+    width: 76.4%;
+    background-image: url(/img/heading-img@2x.png);
+    background-size: cover;
+    background-position: center 0;
+    position: relative;
+  }
 }
 
 .page-ttl {
