--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -194,7 +194,7 @@ body.noscroll {
 .kv-wrapper {
   height: 86.5%;
   width: 76.4%;
-  background-image: url(/img/kv-img.png);
+  background-image: url(img/kv-img.png);
   background-size: cover;
   background-position: center 0;
   position: relative;
