--- a/css/about.css
+++ b/css/about.css
@@ -195,7 +195,7 @@ body.noscroll {
 .kv-wrapper {
   height: 86%;
   width: 76.4%;
-  background-image: url(img/heading-img.png);
+  background-image: url(../img/heading-img.png);
   background-size: cover;
   background-position: center 0;
   position: relative;
