--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -265,7 +265,7 @@ body.noscroll {
 }
 
 .about-bg {
-  background-image: url(/img/about-img.png);
+  background-image: url(../img/about-img.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -274,7 +274,7 @@ body.noscroll {
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
   .about-bg {
-    background-image: url(/img/about-img@2x.png);
+    background-image: url(../img/about-img@2x.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
